<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <EditText
        android:inputType="textPersonName|textCapWords"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:hint="@string/EnterName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YourEmail" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/EnterEmail"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Picture" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TakePicture" />
    <RelativeLayout
        android:id="@+id/lout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="Go to chat"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/button4"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="Go to weather"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/button5"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="Go to Toolbar page"
            android:layout_below="@+id/button4"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>